# RocketCrud

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/libs/: mod.rs
src/libs/config/: constants.rs
src/libs/database/: connection.rs
src/libs/index_app/: helpers.rs  mod.rs  schema.rs
src/libs/user_app/structures/: implementations.rs  mod.rs  models.rs
