[package]
name = "rocket-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4", features = ["serde"]}
uuid = { version="1.3.3", features = ["v4","fast-rng","macro-diagnostics", "serde"] }
serde = {version="1.0.163", features = ["derive"]}
serde_json = "1.0.96"
dotenv = "0.15.0"
pwhash = "1.0.0"
titlecase = "2.2.1"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
rocket_dyn_templates = {version = "=0.1.0-rc.3", features = ["tera"]}
diesel = { version = "2.1.0", features = ["postgres"] }